<resources>
    <string name="app_name">Teamapp</string>
    <string name="welcome">Welcome to</string>
    <string name="allow_access_text">Allow us to access</string>
    <string name="storage">Storage</string>
    <string name="storage_suggestion_text">To add and store capture image</string>
    <string name="camera">Camera</string>
    <string name="camera_suggestion_text">To capture site location and scan attachment</string>
    <string-array name="location">
        <item>Site_Location</item>
        <item>At_Hotel</item>
        <item>Base_Location</item>
    </string-array>
    <string name="location_suggestion_text">To get site location</string>
    <string name="let_started">Let\'s get started</string>
    <string name="next">Next</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="timesheet">Timesheet</string>
    <string name="fontFamilyMedium">sans-serif-medium</string>
    <string name="fontFamilyLight">sans-serif-light</string>
    <string name="fontFamilyCondensed">sans-serif-condensed</string>
    <string name="try_again">Try Again</string>
    <string name="expenses">Expenses</string>
    <string name="project_task">Projects &amp; Activities</string>
    <string name="policies">Policies</string>
    <string name="faq">FAQ</string>
    <string name="attendance_leave">Attendances &amp; Leaves</string>
    <string name="punch_in_out">Punch IN/OUT</string>
    <string name="vendor">Vendor</string>
    <string name="last_date">1</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="navigation_drawer_open">Navigation Open</string>
    <string name="navigation_drawer_close">Navigation Close</string>
    <string name="punch_in">Punch IN</string>
    <string name="punch_out">Punch OUT</string>
    <string name="project">Project</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="travel_booking">Travel Booking</string>
    <string name="in">IN</string>
    <string name="add_task">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="save_continue">Save &amp; Continue</string>
    <string name="leave">Leave</string>
    <string name="remainingLeave">Remaining Leaves : </string>
    <string name="start_date">Start Date *</string>
    <string name="end_date">End Date *</string>
    <string name="description">Description (min 30 character) *</string>
    <string name="request">Request</string>
    <string name="leave_surety_text">I will insure all project activity are resolved before start leave</string>
    <string name="date_value">%1$d-%2$s-%3$s</string>
    <string name="leave_request">Leave Request</string>
    <string name="service_not_available">Please Try Again</string>
    <string name="service">Service not available Try again after 15 sec</string>
    <string name="invalid_lat_long_used">invalid latitude longitude</string>
    <string name="no_address_found">No address found</string>
    <string name="time">Time</string>
    <string name="pending_task">Pending Task</string>
    <string name="out">OUT</string>
    <string name="enable">Enable</string>
    <string name="time_dialog_message">Your time is incorrect, Please switch on the automatic date &amp; date</string>
    <string name="full_day">Full day</string>
    <string name="view_more">View more</string>
    <string name="weekend">Weekend</string>
    <string name="holiday">Holiday</string>
    <string name="full_day_present">Present Full Day</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time_text">%1$s:%2$s</string>
    <string name="email">Email</string>
    <string name="first_half">1st half</string>
    <string name="second_half">2nd half</string>
    <string name="attendance">Attendance</string>
    <string name="leave_location_text">Location during leave *</string>
    <string name="restore_data">Restore Data</string>
    <string name="finish">Finish</string>
    <string name="no_location_data_provided">No location data provider</string>
    <string name="address_found">address found</string>
    <string name="balance_leave">Leave Balance :</string>
    <string name="insufficient_balance">Insufficient balance</string>
    <string name="duration">Duration</string>
    <string name="half_days">Half Days</string>
    <string name="daily_summery">Daily Summery</string>
    <string name="submit">Submit</string>
    <string name="set_date_value">%1$d-%2$02d-%3$02d</string>
    <string name="add_timesheet">Add Timesheet</string>
    <string name="hours_text">0.0</string>
    <string name="min_hours_value">%1$02d:%2$02d</string>
    <string name="done">Done</string>
    <string name="minute">M</string>
    <string name="hour">H</string>
    <string name="set_time">Set Time</string>
    <string name="leaves">Leaves</string>
    <string name="hello_worldRed"><font fgcolor="red">Hello World</font></string>
    <string name="internet_not_available">Internet not available</string>
    <string name="server_not_connected">Can\'t connect to server</string>
    <string name="more_activity">More Activity (max 100)</string>
    <string name="add">Add</string>
    <string name="filter">Filter</string>
    <string name="picker_year_month">Set month &amp; year</string>
    <string name="no_timesheet_history">No timesheet history found!</string>
    <string name="month_year_picker">Pick month year</string>
    <string name="project_view">Project view</string>
    <string name="date_View">Date View</string>
    <string name="slow_internet_connection">Slow Internet Connection</string>
    <string name="no_projet_assigned">No project assigned!</string>
    <string name="fetch_location">fetching location</string>
    <string name="admin">Admin</string>
    <string name="add_project">Add Project</string>
    <string name="assign_activity">Assign Activity</string>
    <string name="assign_leaves">Assign Leaves</string>
    <string name="assign_leave">Assign Leave</string>
    <string name="approve_leave">Approve Leave</string>
    <string name="approve_timesheet">Approve timesheet</string>
    <string name="customer_name">Customer Name *</string>
    <string name="project_name">Project Name *</string>
    <string name="billing_type">Billing Type *</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="project_type">Project Type *</string>
    <string name="budget_type">Budget Type *</string>
    <string name="project_budget_hours">Project Budget Hours *</string>
    <string name="billable_text">Put tick if part of signed service timesheet. *</string>
    <string-array name="halfDaysArray">
        <item>None</item>
        <item>All Days</item>
        <item>Start Day Only</item>
        <item>End Day Only</item>
        <item>Start and End Day Only</item>
    </string-array>
    <string-array name="DurationArray">
        <item>Full Day</item>
        <item>1st Half</item>
        <item>2nd Half</item>
    </string-array>
    <string-array name="billableArray">
        <item>Billabe</item>
        <item>Non-Billable</item>

    </string-array>
    <string-array name="halfDurationArray">
        <item>1st Half</item>
        <item>2nd Half</item>
    </string-array>
    <string-array name="leaveReasonArray">
        <item>Sick/Medical</item>
        <item>Personal Holidays</item>
        <item>Training/Study</item>
        <item>Maternity/Paternity</item>
        <item>Family emergency</item>
        <item>Bereavement</item>
    </string-array>
    <string-array name="leaveTypeArray">
        <item>Earned Leave</item>
        <item>Leave Without Paid</item>
        <item>Trainee Leave</item>
    </string-array>
    <string-array name="yearArray">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="billingTypeArray">
        <item>Based on Staff Hours</item>
        <item>Fixed Cost for Project</item>
        <item>Based on Project Hours</item>
        <item>Based on Task Hours</item>
    </string-array>
    <string-array name="idProofTypeArray">
        <item>Aadhar Card</item>
        <item>PAN Card</item>
        <item>Voter Id Card</item>
    </string-array>
    <string-array name="placeSupplyArray">
        <item>[AN] - Andaman and Nicobar Islands</item>
        <item>[AD] - Andhra Pradesh</item>
        <item>[AR] - Arunachal Pradesh</item>
        <item>[AS] - Assam</item>
        <item>[BR] - Bihar</item>
        <item>[CH] - Chandigarh</item>
        <item>[CG] - Chhattisgarh</item>
        <item>[DN] - Dadra and Nagar Haveli</item>
        <item>[DD] - Daman and Diu</item>
        <item>[DL] - Delhi</item>
        <item>[GA] - Goa</item>
        <item>[GJ] - Gujarat</item>
        <item>[HR] - Haryana</item>
        <item>[HP] - Himachal Pradesh</item>
        <item>[JK] - Jammu and Kashmir</item>
        <item>[JH] - Jharkhand</item>
        <item>[KA] - Karnataka</item>
        <item>[KL] - Kerala</item>
        <item>[LD] - Lakshadweep</item>
        <item>[MP] - Madhya Pradesh</item>
        <item>[MH] - Maharashtra</item>
        <item>[MN] - Manipur</item>
        <item>[ML] - Meghalaya</item>
        <item>[MZ] - Mizoram</item>
        <item>[NL] - Nagaland</item>
        <item>[OD] - Odisha </item>
        <item>[PY] - Puducherry</item>
        <item>[PB] - Punjab</item>
        <item>[RJ] - Rajasthan</item>
        <item>[SK] - Sikkim</item>
        <item>[TN] - Tamil Nadu</item>
        <item>[TS] - Telangana</item>
        <item>[TR] - Tripura</item>
        <item>[UP] - Uttar Pradesh</item>
        <item>[UK] - Uttarakhand</item>
    </string-array>
    <string name="fixCost">Fix Cost for Project</string>
    <string name="activity">activity</string>
    <string name="activities">Activities</string>
    <string name="user_name">User Name</string>
    <string name="no_leave_found">No leave found</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="dismiss">Dismiss</string>
    <string name="approve">Approve</string>
    <string name="approve_project">Approve Project</string>
    <string name="change_leave_status">Do you wish to change leave status?</string>
    <string name="resource">Resources</string>
    <string name="books">Books</string>
    <string name="ppts">PPT</string>
    <string name="pdf">PDF</string>
    <string name="address_detail">Address Detail</string>
    <string name="address">Address *</string>
    <string name="state">State *</string>
    <string name="country">Country *</string>
    <string name="payroll">Payroll</string>
    <string name="district">District *</string>
    <string name="project_location">Project Location*</string>
    <string name="client_name">Client Name *</string>
    <string name="estimated_end_date">Estimated End Date *</string>
    <string name="scope_work">Scope of work as per job action sheet (min 50) *</string>
    <string name="estimated_days">Estimated number of days for the scope *</string>
    <string name="job_action_sheet">Job Allocation Sheet</string>
    <string name="system_backup">System Backup</string>
    <string name="i_got_following">I already got the following.</string>
    <string name="nav_travel_booking">Travel</string>
    <string name="nav_project_activities">Project &amp; Activities</string>
    <string name="nav_task_todo_list">Task &amp; To Do List</string>
</resources>