<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_time"
        android:textSize="@dimen/headingTextSize"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/pickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:gravity="center">

        <NumberPicker
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/hourText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/hour"
            android:text="@string/hour"
            android:textColor="@color/colorPrimaryText"
            android:textSize="17sp" />

        <NumberPicker
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/hourText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/minute"
            android:text="@string/minute"
            android:textColor="@color/colorPrimaryText"
            android:textSize="17sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickerLayout"
        android:padding="10dp">


        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:text="@string/done" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/done"
            android:background="@android:color/transparent"
            android:text="@string/cancel" />
    </RelativeLayout>
</RelativeLayout>